added the heading

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </style>
 </head>
 <body>
+  <h1>This is the digital clock timer</h1>
   <div id="clock"></div>
   <script>
     function updateClock() {
